--- a/index.html
+++ b/index.html
@@ -1,125 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Montserrat:wght@300;700&family=Roboto+Slab&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <header class="header-page">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Montserrat:wght@300;700&family=Roboto+Slab&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="./styles/styles.css" />
+</head>
+
+<body>
+  <header class="header-page">
+    <div class="container">
+      <nav class="header-navigation">
+        <a class="header-logo" href="/">Golden</a>
+        <ul class="header-list">
+          <li class="header-item">
+            <a class="header-link" href="#">Home</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="#">Services</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="#">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="#">About</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="services">
       <div class="container">
-        <nav class="header-navigation">
-          <a class="header-logo" href="/">Golden</a>
-          <ul class="header-list">
-            <li class="header-item">
-              <a class="header-link" href="#">Home</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link" href="#">Services</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link" href="#">Portfolio</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link" href="#">About</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </nav>
+        <h1 class="services-title">SERVICES</h1>
+        <ul class="services-list">
+          <li class="services-item">
+            <img src="#" alt="E-Commerce" class="services-photo" />
+            <h3 class="services-name">E-Commerce</h3>
+            <p class="services-text">
+              Proin iaculis purus consequat sem cure digni ssim. Donec
+              porttitora entum suscipit aenean rhoncus posuere odio in
+              tincidunt.
+            </p>
+          </li>
+          <li class="services-item">
+            <img src="#" alt="eded" class="services-photo" />
+            <h3 class="services-name">Responsive Web</h3>
+            <p class="services-text">
+              Proin iaculis purus consequat sem cure digni ssim. Donec
+              porttitora entum suscipit aenean rhoncus posuere odio in
+              tincidunt.
+            </p>
+          </li>
+          <li class="services-item">
+            <img src="#" alt="eds" class="services-photo" />
+            <h3 class="services-name">Web Security</h3>
+            <p class="services-text">
+              Proin iaculis purus consequat sem cure digni ssim. Donec
+              porttitora entum suscipit aenean rhoncus posuere odio in
+              tincidunt.
+            </p>
+          </li>
+        </ul>
       </div>
-    </header>
-    <main>
-      <section class="services">
-        <div class="container">
-          <h1 class="services-title">SERVICES</h1>
-          <ul class="services-list">
-            <li class="services-item">
-              <img src="#" alt="E-Commerce" class="services-photo" />
-              <h3 class="services-name">E-Commerce</h3>
-              <p class="services-text">
-                Proin iaculis purus consequat sem cure digni ssim. Donec
-                porttitora entum suscipit aenean rhoncus posuere odio in
-                tincidunt.
-              </p>
-            </li>
-            <li class="services-item">
-              <img src="#" alt="eded" class="services-photo" />
-              <h3 class="services-name">Responsive Web</h3>
-              <p class="services-text">
-                Proin iaculis purus consequat sem cure digni ssim. Donec
-                porttitora entum suscipit aenean rhoncus posuere odio in
-                tincidunt.
-              </p>
-            </li>
-            <li class="services-item">
-              <img src="#" alt="eds" class="services-photo" />
-              <h3 class="services-name">Web Security</h3>
-              <p class="services-text">
-                Proin iaculis purus consequat sem cure digni ssim. Donec
-                porttitora entum suscipit aenean rhoncus posuere odio in
-                tincidunt.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="contact">
-        <div class="container">
-          <h2 class="contacts-title">Contact us</h2>
-          <form class="contacts-form">
-            <div class="contacts-flex">
-              <ul class="contacts-list">
-                <li class="contacts-item">
-                  <input class="input"
-                    placeholder="YOUR NAME *"
-                    type="text"
-                    class="contacts-input"
-                  />
-                </li>
-                <li class="contacts-item">
-                  <input class="input"
-                    placeholder="YOUR E-MAIL *"
-                    type="text"
-                    class="contacts-input"
-                  />
-                </li>
-                <li class="contacts-item">
-                  <input class="input"
-                    placeholder="SUBJECT *"
-                    type="text"
-                    class="contacts-input"
-                  />
-                </li>
-              </ul>
-              <textarea class="textarea"
-                placeholder="YOUR MESSAGE *"
-                cols="30"
-                rows="10"
-                class="contacts-coment"
-              ></textarea>
-            </div>
-            <button class="contacts-button">Send Message</button>
-          </form>
-        </div>
-      </section>
-    </main>
-  </body>
+    </section>
+    <section class="contact">
+      <div class="container">
+        <h2 class="contacts-title">Contact us</h2>
+        <form class="contacts-form">
+          <div class="contacts-flex">
+            <ul class="contact-list">
+              <li class="contact-item"><input placeholder="your name *" type="text" class="contacts-input" /></li>
+              <li class="contact-item"><input placeholder="your e-mail *" type="text" class="contacts-input" /></li>
+              <li class="contact-item"><input placeholder="subject *" type="text" class="contacts-input" /></li>
+            </ul>
+            <textarea placeholder="Your message *" cols="30" rows="10" class="contacts-coment"></textarea>
+          </div>
+          <button class="contacts-button">Send Message</button>
+        </form>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
