--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
         <h1 class="services-title">SERVICES</h1>
         <ul class="services-list">
           <li class="services-item">
-            <img src="#" alt="E-Commerce" class="services-photo" />
+            <div class="services-box">
+            <svg class="services-icon" width="38" height="38">
+              <use href="./image/icons.svg#icon-bag"></use>
+            </svg>
+            </div>
             <h3 class="services-name">E-Commerce</h3>
             <p class="services-text">
               Proin iaculis purus consequat sem cure digni ssim. Donec
@@ -58,7 +62,11 @@
             </p>
           </li>
           <li class="services-item">
-            <img src="#" alt="eded" class="services-photo" />
+            <div class="services-box">
+            <svg class="services-icon" width="40" height="33">
+              <use href="./image/icons.svg#icon-check"></use>
+              </div>
+            </svg>
             <h3 class="services-name">Responsive Web</h3>
             <p class="services-text">
               Proin iaculis purus consequat sem cure digni ssim. Donec
@@ -67,7 +75,11 @@
             </p>
           </li>
           <li class="services-item">
-            <img src="#" alt="eds" class="services-photo" />
+            <div class="services-box">
+            <svg class="services-icon" width="27" height="37">
+              <use href="./image/icons.svg#icon-lock"></use>
+              </div>
+            </svg>
             <h3 class="services-name">Web Security</h3>
             <p class="services-text">
               Proin iaculis purus consequat sem cure digni ssim. Donec
